# djangochatbotAI

./: .coverage  .gitattributes  .gitignore  .notes.md.swp  Dockerfile  Dockerfile_TO_WORK_ON  README.md  analyzer_log_agent_cronjob.py  analyzer_log_agent_cronjob.sh  chill_requirements.txt  coverage_report.md  cronjob_log_analyzer.sh  cronjob_make_files_executable.sh  delete_postgresql_purge_all.py  delete_postgresql_purge_all.sh  django_gunicorn_only_dockerfile  docker-compose.yml  docker-compose_TO_WORK_ON.yml  e_n_v  entrypoint.sh  entrypoint_TO_WORK_ON.sh  example_dynamic_e_n_v.txt  example_gunicorn.txt  example_nginx_conf.txt  example_normal_e_n_v.txt  full_server_setup.py  gunicorn.service  install_containerd_crictl_nerdctl.sh  log_analyzer_agent_graph.py  notes.md  requirements.txt  vars.e_n_v
agents/: admin.py  apps.py  models.py  routing_sqlite_db.py  urls.py  views.py
businessdata/: forms.py  models.py  urls.py  views.py
chatbotAI/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
chatbotsettings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
clientchat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
common/: admin.py  discord_notifications.py  log_agents_job.py  logs_filters.py  middleware_logs_custom.py  models.py  record_to_db.py  urls.py  views.py
docs/: dev_docs.md
log_agent_reports/: 2025_01_11_critical_log_analyzer_advice_report.md  2025_01_11_error_log_analyzer_advice_report.md  2025_01_11_warning_log_analyzer_advice_report.md  2025_01_13_critical_log_analyzer_advice_report.md  2025_01_13_error_log_analyzer_advice_report.md  2025_01_13_warning_log_analyzer_advice_report.md  2025_01_16_critical_log_analyzer_advice_report.md  2025_01_16_error_log_analyzer_advice_report.md  mock_log.txt  (+7 more)
rust_lib/: Cargo.toml  pyproject.toml
rust_lib/src/: lib.rs  logs_writer.rs
rust_lib/src/app_utils/: ai_personality.rs  connect_postgresql.rs  delete_embeddings.rs  formatters.rs  json_dumps_manager.rs  load_envs.rs  mod.rs  token_count_helper.rs
(+166 files in other folders)
