[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["extension-module"] }
# for HTTP requests to Groq or Ollama APIs...
reqwest = { version = "0.11", features = ["blocking"] }
# if needed to change rust structs or data structures to JSON, YAML, TOML...
# we might need that to serialize and deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
