[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rust_lib"
version = "0.1.0"
description = "For Python to use Rust defined function for performance enhancement"
authors = [{name = "Creditizens", email="creditizens@metaverse.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
#dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
